--- a/style/styles.styl
+++ b/style/styles.styl
@@ -113,10 +113,12 @@ section[role=main]
      line-height 15px
 
   pre
+    line-height 18px
     padding 10px
     font-size 11px
     rounded 5px
     background-color #fff
+    
 
 .credit
   font-size 11px
