--- a/views/server.dust
+++ b/views/server.dust
@@ -2,10 +2,10 @@
 
 ### Overview
 
-The server is a collection of node modules each which handle different aspects of the request and response pipeline. This makes extending the capabilities of each module clean. In most cases, extensions will be implemented in **middleware.js**. For example, if you wanted to install [Passport](http://passportjs.org/) as your authentication service. All you would have to do is install the module with npm, then add the appropriate routes to the middleware.js setup() method.
+The server is a collection of node modules each which handle different aspects of the request and response pipeline. This makes extending the capabilities of each module clean. In most cases, extensions will be implemented in **middleware.js**. For example, if you wanted to install [Passport](http://passportjs.org/) as your authentication service, then all you would have to do is install the module with npm, and add the appropriate routes to the middleware.js setup() method.
 
 ### Pipeline
-The server modules handle the request / response flow, more or less in left to right order:
+The server modules handle the request / response flow in left to right order:
 <div class="flow">
   <h5>server.js</h5>
   <p><b>server/server.js</b> instantiates <a href="http://nodejs.org/api/http.html">HTTP</a>, <a href="https://www.npmjs.org/package/express">express</a> as well as the <a href="http://expressjs.com/4x/api.html#middleware">middleware</a>, and the other components. It also <b>watches for changes to swell.js</b> and reloads them for save n' go development.</p>
@@ -38,9 +38,9 @@ The server modules handle the request / response flow, more or less in left to r
 
 ### Middleware
 
-As mentioned above, you are free to use any middleware you like by simply adding it within the **setup() method** in **server/middelware.js**. This can be extremely useful in the event you want to make use of **regular expression** route matching, or require more control over the response object for certain routes. 
+Middleware is the first stop on the request pipeline. Any route matching functions implemented in **server/middelware.js** will take priority over the default application routes. This is useful in the event you want to make use of **regular expression** route matching, or require more control over the response object for certain routes. 
 
-Here's a simple example of handling a request via regex matched route in middleware.js (taken from [the expressjs docs](http://expressjs.com/4x/api.html#middleware))
+Here's a simple example handling a request via regex matched route in middleware.js (taken from [the expressjs docs](http://expressjs.com/4x/api.html#middleware))
 
     app.get(/^\/commits\/(\w+)(?:\.\.(\w+))?$/, function(req, res){
         var from = req.params[0];
@@ -53,7 +53,7 @@ Here's a simple example of handling a request via regex matched route in middlew
 
 There are two ways in which requests are routed to a responder object method (located in server/swell.js): 
 
-**1. swell.json** allows you to map routes using the same method as with middleware, but directly to a responder method within your configuration file. Example:
+**1. swell.json** allows you to directly map routes to your responder object methods using your configuration file. Example:
 
 
     "/widgets/:id" : "Widgets.view"
@@ -64,37 +64,67 @@ There are two ways in which requests are routed to a responder object method (lo
 
 ### Responders
 
-Responders are the javascript objects (usually compiled from coffescript) which are instantiated and called by router.js. Each responder method takes two arguments, *request* and *callback*. The request is basically the raw req object from the express route with multipart and query data stored in a special **request.data** parameter. The callback method arguments (*err*, *data*, *emit*) are then passed onto render.js and socket.js (if applicable).
+Responders are objects instantiated and called by router.js on each request. Methods defined within them take two arguments, *request* and *callback*. The request is esentially the raw req object from the express route along with any query string, multipart / form data stored in **request.data**. The callback function takes the arguments (*err*, *data*, *emit*) which are then passed onto render.js and socket.js if an emit argument is passed.
 
-Here is a simple example router "Example" (written in coffeescript):
+*A simple router "Examples" (written in coffeescript):*
 
     class Examples extends swell.Responder
   
       collection: collections.Examples
       expose_rest: true
   
-      colored: (request, callback) =>
+      color: (request, callback) =>
         new @collection @config, (err, @collection) =>
           @collection.query color:request.data.color, callback 
 
-In this example, a GET request to */examples/color/?color=red* would return a list of examples matching color:'red'. Additional methods can be created and will map automatically. Responder classes are all compiled into **server/swell.js**. When watching, changes will be reflected in each new request made to the server.
+In this example, a GET request to */examples/color/?color=red* would return a list of examples matching color:'red'. Additional methods can be created and will map automatically via string inflection. Responder classes are all compiled into **server/swell.js**. When watching, changes will be reflected in each new request made to the server.
 
 
 ### Collections
 
-Collection objects are the primary objects your responders will interact with. swell.Collection (server) methods are similar to Backbone.js on the client: **fetch, where, get, add, update,** and **remove**.  Additionaly, collection objects have a few shortcut properties which allow faster list loading, simple sorting and more.  Keep in mind that your collections are **shared by the client** so be careful not to override methods or properties found in [Backbone.Collection](http://backbonejs.org/#Collection)
+Collection objects are the primary objects your responders will interact with. swell.Collection (server) methods are similar to Backbone.js on the client, the core of them being **fetch, where, get, add, update,** and **remove**.  Additionaly, Collection objects have a few shortcut properties for faster list loading, simple sorting and more.
 
-Here is an example collection "Examples" (written in coffeescript):
+*An collection "Examples" (written in coffeescript):*
 
     class Examples extends swell.Collection
   
       model: models.Example
       url: '/examples/'
-      resource:'mongo'
+      resource: 'mongo'
       store: 'examples'
       sort_by: 'sort_order'
       list: ['_id','name']
      
-     
+
+It's common these days for applications to use many data sources. For that reason Collections **each subscribe to their own data source**. Keep in mind that *your implementations* of any swell.Collection will be  **shared by the client**, so be careful not to override the core client side methods and properties found in [Backbone.Collection](http://backbonejs.org/#Collection)
+
+
+### Models
+
+Models are objects which define field keys and data types to be persisted on the server. Both the client and server share a common core validate(*attrs*) method (taken from <a href="http://backbonejs.org/#Model-validate">BackboneJS</a>) which validates and sanitizes data within your app. As with collecitons, your implementations are **shared by the client**, so be careful not to override [Backbone.Model](http://backbonejs.org/#Model) core functionality.
+
+*A simple "Example" model (written in coffeescript):*
+
+    class Example extends swell.Model
+      
+      idAttribute: '_id'
+  
+      fields:
+        name:
+          type: 'string'
+          not_empty: true
+          not: 'bad string'
+          message: 'Name cannot be "bad string"'
+    
+        color:
+          type: 'string'
+          expr: /^#([0-9a-f]{3}|[0-9a-f]{6})$/
+          message: 'Colors must be hex values'
+    
+
+
+
+
+
 _____________
 {>"partials/credit"/}
