--- a/views/partials/menu.dust
+++ b/views/partials/menu.dust
@@ -1,24 +1,5 @@
-#### version {config.version}
-*    <a href="/page/docs" {@eq key="docs" value=view}class="selected"{/eq}>Overview</a>
-*    <a href="/page/start" {@eq key="start" value=view}class="selected"{/eq}>Starting</a>
-*    <a href="/page/server" {@eq key="server" value=view}class="selected"{/eq}>Server</a>
-    *    <a href="#overview">Overview</a>
-    *    <a href="#pipeline">Pipeline</a>
-    *    <a href="#middleware">Middleware</a>
-    *    <a href="#routes">Routes</a>
-    *    <a href="#responders">Responders</a>
-    *    <a href="#collections">Collections</a>
-    *    <a href="#models">Models</a>
-    *    <a href="#rest">Data</a>
-    *    <a href="#rest">REST</a>
-    *    <a href="#views">Views</a>
-*    <a href="/page/client" {@eq key="client" value=view}class="selected"{/eq}>Client</a>
 
-
-#### CORE
-*    <a href="/page/collection" {@eq key="model" value=view}class="selected"{/eq}>swell.Responder</a>
-*    <a href="/page/collection" {@eq key="model" value=view}class="selected"{/eq}>swell.Collection</a>
-*    <a href="/page/model" {@eq key="model" value=view}class="selected"{/eq}>swell.Model</a>
-*    <a href="/page/collection" {@eq key="model" value=view}class="selected"{/eq}>swell.Router</a>
-
+### Flybook Admin
+*    <a href="#">home</a>
+*    <a href="#reports">reports</a>
 
