--- a/views/layouts/app.dust
+++ b/views/layouts/app.dust
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Flybook Admin</title>
+  <title>Examples App | Swell</title>
   <link rel="apple-touch-icon" href="/public/img/apple-touch-icon.png" />
   <link rel="shortcut icon" href="/public/favicon.ico" />
   <link rel="stylesheet" href="/public/styles.css" />
